# OpenAI_agent

New folder/op-ag/: pyproject.toml
New folder/op-ag/src/: test-2.py
New folder/op-ag/src/test/: test.py
class01/: README.md  pyproject.toml
class01/src/: main.py
class01/src/class01/: hello.py
class01/src/class01/test_folder/sub_folder/: test.py
class01_introduction/: README.md  pyproject.toml
class01_introduction/src/class01/: __init__.py
class02/: README.md  pyproject.toml
class02/src/: main.py  simple_agent.py
class02/src/class02/: .env  first_agent.py  main.py
class03/: README.md  pyproject.toml
class03/src/: .env  weather.py
class04_simple_agent/: .env  README.md  pyproject.toml
class04_simple_agent/src/class02/: first_agent.py
class05_function_tool/: .env  pyproject.toml
class05_function_tool/src/class03/: __init__.py  tool.py
class07_context/: README.md  pyproject.toml
class07_context/src/contex_integeration/: __init__.py
class08_output/: .env
class08_output/src/class08_output/: __init__.py  output.py
class08_output_type/: pyproject.toml
class09_handsoff/: pyproject.toml
class10_recap/: pyproject.toml
class10_recap/src/running_paractice/: __init__.py  abc.py
combine/: pyproject.toml
combine/src/combine/: __init__.py
combine/src/combine/helloworld/: hello.py
contex_integeration/: pyproject.toml
contex_integeration/src/: contex_ex.py
contex_integeration/src/contex_integeration/: basic_contest.py  contex_ex.py
gemini_integeration/: pyproject.toml
gemini_integeration/src/: gemini.py
gemini_integeration/src/gemini_integeration/: __init__.py
gemini_project/src/gemini_project/: __init__.py
gemini_project/src/hello/: test.py
running_paractice/src/running_paractice/: abc.py
