[project]
name = "class01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Areej", email = "areejzaheer96@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
class01 = "class01:main"
new_cammand = "class01.hello:HelloWorld"
test_cammand = "class01.test_folder.sub_folder.test:Test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
