[project]
name = "class02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Areej", email = "areejzaheer96@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
class02 = "class02:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
