[project]
name = "class03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Areej", email = "areejzaheer96@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dot>=0.3.0",
    "dotenv>=0.9.9",
    "env>=0.1.0",
    "openai-agents>=0.1.0",
]

[project.scripts]
class03 = "class03:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
