[project]
name = "gemini-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Areejshaikh", email = "160318564+Areejshaikh@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.1.0",
]

[project.scripts]
gemini-project = "gemini_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
