[project]
name = "combine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Areej", email = "areejzaheer96@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
combine = "combine:main"
hello = "combine.helloworld:Hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
