[project]
name = "gemini-integeration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Areej", email = "areejzaheer96@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.1.0",
]

[project.scripts]
gemini-integeration = "gemini_integeration:main"
gemini  = "hello:gemiiIntegeration"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
